<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- Car Zone Logo -->
    <ImageView
        android:id="@+id/carlogoView"
        android:layout_width="123dp"
        android:layout_height="90dp"
        android:src="@drawable/carlogo" />

    <!-- Sign Up Text -->
    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/carlogoView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Sign Up"
        android:textColor="#FFFFFFFF"
        android:textSize="35dp"
        android:textStyle="bold" />

    <!-- Username Field -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/username_hint"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <!-- Email Field -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <!-- Phone Field -->
    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/phone_hint"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneEditText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password_hint"
        android:backgroundTint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:padding="10dp"
        android:inputType="textPassword" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:background="#FF0000"
        android:text="@string/signup_button_text"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:contentDescription="@string/sign_up_button_description" />

</RelativeLayout>